# backend/src/main/java/net/wohlfart/ships/controller/TableDataResponse.java
@@ -1,13 +1,0 @@
-package net.wohlfart.ships.controller;
-
-import lombok.Data;
-import lombok.RequiredArgsConstructor;
-
-@Data
-@RequiredArgsConstructor
-public class TableDataResponse {
-
-
-}
-
-
