# backend/src/main/java/net/wohlfart/ships/controller/TableDetails.java
@@ -1,10 +1,0 @@
-package net.wohlfart.ships.controller;
-
-
-import lombok.Data;
-import lombok.RequiredArgsConstructor;
-
-@Data
-@RequiredArgsConstructor
-public class TableDetails {
-}
