# backend/src/main/java/net/wohlfart/ships/controller/UploadResponse.java
@@ -1,12 +1,0 @@
-package net.wohlfart.ships.controller;
-
-import lombok.Data;
-import lombok.RequiredArgsConstructor;
-
-@Data
-@RequiredArgsConstructor
-public class UploadResponse {
-
-    private final String text;
-
-}
