# backend/src/main/java/net/wohlfart/ships/dtos/FetchRequest.java
@@ -1,0 +1,21 @@
+package net.wohlfart.ships.dtos;
+
+
+import lombok.Data;
+import lombok.RequiredArgsConstructor;
+
+import java.time.Instant;
+
+@Data
+@RequiredArgsConstructor
+public class FetchRequest {
+
+    String apiKey;
+
+    String mmsi;
+
+    Instant begin;
+
+    Instant end;
+
+}
